# cmake

./: .gitmodules
01-basic/A-hello-cmake/: CMakeLists.txt  CMakeLists2.txt  hello_local.cpp  hello_local.h  main.cpp  z.txt
01-basic/A-hello-cmake/zach-dir/: CMakeLists.txt  goodbye.cc  goodbye.h
